syntax = "proto3";
option go_package = "./echo_service";

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    string lastName = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}